syntax = "proto3";

option csharp_namespace = "GrpcServer";

package message;

service MessageService {
    rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
    string message = 1;
}

message MessageResponse {
    string response = 1;
}
